translated to readMore

--- a/exampleSite/i18n/zh-cn.yaml
+++ b/exampleSite/i18n/zh-cn.yaml
@@ -1,7 +1,7 @@
 - id: blogTitle
   translation: 最新文章
 - id: readMore
-  translation: Lire la suite
+  translation: 更多
 - id: viewAllPost
   translation: 全文
 - id: share
